<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:paddingHorizontal="50dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageView"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_profile_of_user"
        android:src="@drawable/user_photo_sample" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userImageView"
        android:text="@string/sample_user_name"
        android:layout_alignTop="@id/userImageView"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameTextView"
        android:layout_alignBottom="@id/userImageView"
        android:layout_toEndOf="@id/userImageView"
        android:layout_marginTop="10dp"
        android:text="@string/email_sample"
        android:textColor="@color/grey"
        android:textSize="10sp"
        android:gravity="bottom"
        android:textAlignment="gravity"
        />
</RelativeLayout>