<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_screen_background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="186dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInput"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/white_background"
        android:hint="@string/name"
        android:textSize="16dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/palindromeInput"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_background"
        android:hint="@string/palindrome"
        android:textColorHint="@color/grey"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInput" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_background"
        android:text="@string/check"
        android:textSize="14dp"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/palindromeInput" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_background"
        android:text="@string/next"
        android:textSize="14dp"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkButton" />


</androidx.constraintlayout.widget.ConstraintLayout>